@@ -1,5 +1,10 @@
 2007-04-30  Ross Burton  <ross@burtonini.com>
 
+	* libjuicer/sj-extractor.c:
+	Refactor to be more GObject-like.
+
+2007-04-30  Ross Burton  <ross@burtonini.com>
+
 	* libjuicer/sj-metadata.[ch]:
 	* libjuicer/sj-metadata-musicbrainz.c:
 	Refactor to be more GObject-like.
